infra/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/networkapi: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: PORT
              value: "5001"
            - name: config
              value: docker
          image: akwanmaroso/deals-test_web
          name: web
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
